--- a/config-samples/20180903_vscode_settings.json
+++ b/config-samples/20180903_vscode_settings.json
@@ -1,11 +1,19 @@
 {
     "files.autoSave": "onFocusChange",
-    "window.zoomLevel": 0,
+    "window.zoomLevel": 1,
     "editor.renderWhitespace": "all",
 
     "[html]": {
         "editor.tabSize": 2
     },
+    "[javascript]": {
+        "editor.tabSize": 2
+    },
+      "[json]": {
+        "editor.tabSize": 2
+    },
     "explorer.confirmDelete": false,
-    "python.venvPath": "~/.virtualenvs"
+    "python.venvPath": "~/.virtualenvs",
+    "liveServer.settings.donotShowInfoMsg": true,
+    "editor.rulers": [80,120]
 }
